# thalo-cqrs

./: Cargo.toml  bank-account.esdl  build.rs
src/: bank_account.rs  bank_account_tests.rs
